--- a/styles.css
+++ b/styles.css
@@ -557,8 +557,8 @@ section h2 {
 
 /* Footer */
 footer {
-    background-color: var(--primary-color);
-    color: white;
+    background-color: var(--background-color);
+    color:var(--text-color);
     padding: 2rem 0;
     text-align: center;
 }
